--- a/.gitignore
+++ b/.gitignore
@@ -6903,4 +6903,50 @@ arch/arm64/boot/dts/.exynos7870-universal7870_rev01.dtb.dts.tmp
 arch/arm64/boot/dts/exynos7870-smdk7870.dtb
 arch/arm64/boot/dts/exynos7870-universal7870.dtb
 arch/arm64/boot/dts/exynos7870-universal7870_rev01.dtb
+drivers/input/touchscreen/melfas_mms400/.built-in.o.cmd
+drivers/input/touchscreen/melfas_mms400/.melfas_mms400.o.cmd
+drivers/input/touchscreen/melfas_mms400/.melfas_mms400_cmd.o.cmd
+drivers/input/touchscreen/melfas_mms400/.melfas_mms400_mod.o.cmd
+drivers/input/touchscreen/melfas_mms400/.melfas_mms400_test.o.cmd
+drivers/input/touchscreen/melfas_mms400/.melfas_mms438_fw_update.o.cmd
+drivers/input/touchscreen/melfas_mms400/built-in.o
+drivers/input/touchscreen/melfas_mms400/melfas_mms400.o
+drivers/input/touchscreen/melfas_mms400/melfas_mms400_cmd.o
+drivers/input/touchscreen/melfas_mms400/melfas_mms400_mod.o
+drivers/input/touchscreen/melfas_mms400/melfas_mms400_test.o
+drivers/input/touchscreen/melfas_mms400/melfas_mms438_fw_update.o
+drivers/nfc/.ese_p3.o.cmd
+drivers/nfc/ese_p3.o
+drivers/staging/android/.binder_alloc.o.cmd
+drivers/staging/android/binder_alloc.o
+drivers/video/fbdev/exynos/decon_7870/panels/.s6e3fa3_j7y17_lcd_ctrl.o.cmd
+drivers/video/fbdev/exynos/decon_7870/panels/s6e3fa3_j7y17_lcd_ctrl.o
+firmware/tsp_melfas/.mms438_a3xpre.fw.gen.o.cmd
+firmware/tsp_melfas/.mms438_a3xpre_init.fw.gen.o.cmd
+firmware/tsp_melfas/.mms438_j7ve.fw.gen.o.cmd
+firmware/tsp_melfas/.mms438_j7x.fw.gen.o.cmd
+firmware/tsp_melfas/.mms438_j7x_hd.fw.gen.o.cmd
+firmware/tsp_melfas/.mms438_j7y17.fw.gen.o.cmd
+firmware/tsp_melfas/mms438_a3xpre.fw
+firmware/tsp_melfas/mms438_a3xpre.fw.gen.S
+firmware/tsp_melfas/mms438_a3xpre.fw.gen.o
+firmware/tsp_melfas/mms438_a3xpre_init.fw
+firmware/tsp_melfas/mms438_a3xpre_init.fw.gen.S
+firmware/tsp_melfas/mms438_a3xpre_init.fw.gen.o
+firmware/tsp_melfas/mms438_j7ve.fw
+firmware/tsp_melfas/mms438_j7ve.fw.gen.S
+firmware/tsp_melfas/mms438_j7ve.fw.gen.o
+firmware/tsp_melfas/mms438_j7x.fw
+firmware/tsp_melfas/mms438_j7x.fw.gen.S
+firmware/tsp_melfas/mms438_j7x.fw.gen.o
+firmware/tsp_melfas/mms438_j7x_hd.fw
+firmware/tsp_melfas/mms438_j7x_hd.fw.gen.S
+firmware/tsp_melfas/mms438_j7x_hd.fw.gen.o
+firmware/tsp_melfas/mms438_j7y17.fw.gen.S
+firmware/tsp_melfas/mms438_j7y17.fw.gen.o
+net/ipv4/netfilter/.ipt_rpfilter.o.cmd
+net/ipv4/netfilter/ipt_rpfilter.o
+net/ipv6/netfilter/.ip6t_rpfilter.o.cmd
+net/ipv6/netfilter/ip6t_rpfilter.o
+
 
