--- a/arch/arm64/configs/j5y17lte_eur_openm_defconfig
+++ b/arch/arm64/configs/j5y17lte_eur_openm_defconfig
@@ -40,7 +40,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-RefinedKernel_V2.5"
+CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1319,7 +1319,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
@@ -2687,12 +2687,11 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_TD4300 is not set
 # CONFIG_PANEL_BRIGHTNESS_MAX_480CD is not set
 # CONFIG_PANEL_TD4100_J7POP is not set
-CONFIG_PANEL_S6E8AA5X01=y
-# CONFIG_PANEL_S6E8AA5X01_J5Y17_KOR is not set
 # CONFIG_PANEL_EA8061S_J7VE is not set
 # CONFIG_PANEL_S6D7AA0_GTACTIVE2 is not set
 # CONFIG_EXYNOS_LCD_PWM_BACKLIGHT is not set
 # CONFIG_FB_SSD1307 is not set
+CONFIG_PANEL_S6E8AA5X01=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
@@ -3639,7 +3638,6 @@ CONFIG_ECT=y
 CONFIG_ECT_DUMP=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_SCHED_AVG_NR_RUNNING=y
-CONFIG_SCHED_HMP=y
 CONFIG_EXYNOS_HOTPLUG_GOVERNOR=y
 CONFIG_EXYNOS_MCINFO=y
 CONFIG_MCINFO_SYSFS=y
@@ -3992,9 +3990,9 @@ CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
+# CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK is not set
+# CONFIG_TRUSTED_UI_TOUCH_ENABLE is not set
 # CONFIG_EXYNOS_APM is not set
 # CONFIG_MARVELL_DRIVERS is not set
 CONFIG_SENSORS=y
