--- a/rf-tools/Unified/ramdisk/init.rc
+++ b/rf-tools/Unified/ramdisk/init.rc
@@ -229,10 +229,10 @@ on init
     write /dev/cpuset/background/cpus 0-1
     write /dev/cpuset/background/mems 0
     mkdir /dev/cpuset/cached
-    write /dev/cpuset/cached/cpus 1
+    write /dev/cpuset/cached/cpus 0-2
     write /dev/cpuset/cached/mems 0
     mkdir /dev/cpuset/abnormal
-    write /dev/cpuset/abnormal/cpus 1
+    write /dev/cpuset/abnormal/cpus 0-2
     write /dev/cpuset/abnormal/mems 0
     mkdir /dev/cpuset/dex2oat
     write /dev/cpuset/dex2oat/cpus 0-2,4-7
