--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -3671,6 +3671,7 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ATMEL_PIT is not set
 CONFIG_CLKSRC_EXYNOS_MCT=y
 # CONFIG_SH_TIMER_CMT is not set
@@ -4164,6 +4165,7 @@ CONFIG_SDFAT_DEBUG=y
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
+CONFIG_SDFAT_STATISTICS=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
