Revert "ramdisk : Add ALPM Permission"
This reverts commit 0b652509f5365015bbdc83df27653c620a51eaad.

--- a/rf-tools/Unified/ramdisk/init.samsungexynos7870.rc
+++ b/rf-tools/Unified/ramdisk/init.samsungexynos7870.rc
@@ -656,13 +656,10 @@ on fs
     chown system system /sys/class/lcd/panel/temperature
     chown system radio /sys/class/lcd/panel/power_reduce
     chown system system /sys/class/lcd/panel/lux
-    chown system system /sys/class/lcd/panel/adaptive_control
+    chown system media_rw /sys/class/lcd/panel/adaptive_control
     chown system system /sys/class/lcd/panel/dpui
     chown system system /sys/class/lcd/panel/dpui_dbg
     chown system system /sys/devices/svc/OCTA/SVC_OCTA
-
-# Permissions for ALPM
-    chown system system /sys/class/lcd/panel/alpm
 
 # Permissions for input_booster
     chown system radio /sys/class/input_booster/level
