--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ scripts/genksyms/lex.lex.c
 scripts/genksyms/parse.tab.c
 scripts/genksyms/parse.tab.h
 scripts/kallsyms
+fs/sdfat/.statistics.o.cmd
+fs/sdfat/statistics.o
 scripts/kconfig/conf
 scripts/kconfig/zconf.hash.c
 scripts/kconfig/zconf.lex.c
