add init defcon

--- a/arch/arm64/configs/lineage_j5y17lte_defconfig
+++ b/arch/arm64/configs/lineage_j5y17lte_defconfig
@@ -11,6 +11,7 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT_MAP=y
+CONFIG_DEVICE_J5Y17LTE=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
@@ -1039,10 +1040,8 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 CONFIG_SAMSUNG_NFC=y
-CONFIG_ESE_P3_LSI=y
-CONFIG_ESE_SECURE=y
-CONFIG_ESE_SECURE_SPI_PORT=0
-CONFIG_ESE_SECURE_GPIO="gpc6"
+# CONFIG_ESE_P3_LSI is not set
+# CONFIG_ESE_SECURE is not set
 # CONFIG_NFC_PN533 is not set
 # CONFIG_NFC_SIM is not set
 # CONFIG_NFC_FELICA is not set
@@ -3200,7 +3199,7 @@ CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
@@ -3558,6 +3557,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
@@ -3943,6 +3943,7 @@ CONFIG_BATTERY_CISD=y
 # CONFIG_BATTERY_NOTIFIER is not set
 # CONFIG_XADC_SHARE_BATT_WITH_USB_THM is not set
 CONFIG_NON_WATERPROOF_MODEL=y
+CONFIG_S2MU005_EVT4_DISABLE_BUCK_MODE=y
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_FMC is not set
 
@@ -4014,6 +4015,7 @@ CONFIG_SENSORS=y
 # CONFIG_SENSORS_TMD3782_PROX_ABS is not set
 # CONFIG_SENSORS_TMD3700 is not set
 CONFIG_SENSORS_TMD3725=y
+# CONFIG_SENSORS_TMD3725_RF_NOISE_DEFENCE_CODE is not set
 # CONFIG_SENSORS_STK3013 is not set
 # CONFIG_SENSORS_SX9306 is not set
 # CONFIG_SENSORS_SX9306_SUB is not set
@@ -4100,6 +4102,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
+CONFIG_SDCARD_FS_FADV_NOACTIVE=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
 CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
