--- a/arch/arm64/configs/lineage_j5y17lte_defconfig
+++ b/arch/arm64/configs/lineage_j5y17lte_defconfig
@@ -11,7 +11,6 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT_MAP=y
-CONFIG_DEVICE_J5Y17LTE=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
@@ -34,6 +33,7 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
+CONFIG_DTB_J5Y17LTE=y
 
 #
 # General setup
@@ -144,7 +144,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
@@ -186,7 +186,7 @@ CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
-# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
+CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
@@ -375,7 +375,7 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=100
+CONFIG_HZ=300
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -448,6 +448,7 @@ CONFIG_CMDLINE=""
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
 # CONFIG_TIMA_RKP is not set
+# CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
@@ -830,7 +831,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-CONFIG_IP_NF_MATCH_RPFILTER=y
+# CONFIG_IP_NF_MATCH_RPFILTER is not set
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -1161,6 +1162,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -2605,7 +2607,7 @@ CONFIG_MALI_SEC_CL_BOOST=y
 CONFIG_MALI_SEC_UTILIZATION=y
 CONFIG_MALI_PM_QOS=y
 # CONFIG_MALI_BTS_OPTIMIZATION is not set
-CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
+# CONFIG_MALI_DEBUG_KERNEL_SYSFS is not set
 # CONFIG_MALI_EXYNOS_SECURE_RENDERING is not set
 
 #
@@ -3195,6 +3197,8 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
+CONFIG_USB_F_MASS_STORAGE=y
+CONFIG_USB_F_FS=y
 CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
@@ -3556,11 +3560,11 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
-# CONFIG_ANDROID_TIMED_GPIO is not set
+CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
@@ -3609,15 +3613,15 @@ CONFIG_ARGOS=y
 #
 # Samsung TN Logging Options
 #
-CONFIG_SEC_AVC_LOG=y
-CONFIG_SEC_DEBUG_TSP_LOG=y
+# CONFIG_SEC_AVC_LOG is not set
+# CONFIG_SEC_DEBUG_TSP_LOG is not set
 # CONFIG_SEC_DEBUG_PMIC is not set
 
 #
 # Samsung TN Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_SEC_EVENT_LOG=y
 
 #
@@ -3993,9 +3997,9 @@ CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-# CONFIG_TRUSTONIC_TRUSTED_UI is not set
-# CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK is not set
-# CONFIG_TRUSTED_UI_TOUCH_ENABLE is not set
+CONFIG_TRUSTONIC_TRUSTED_UI=y
+CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
+CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
 # CONFIG_EXYNOS_APM is not set
 # CONFIG_MARVELL_DRIVERS is not set
 CONFIG_SENSORS=y
@@ -4347,24 +4351,14 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=y
 #
 # Debug Lockups and Hangs
 #
-CONFIG_LOCKUP_DETECTOR=y
-CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
-CONFIG_HARDLOCKUP_DETECTOR=y
-CONFIG_BOOTPARAM_HARDLOCKUP_PANIC=y
-CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=1
-CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
-CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=1
-CONFIG_DETECT_HUNG_TASK=y
-CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
-# CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
-CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
+# CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHED_DEBUG=y
-# CONFIG_SCHEDSTATS is not set
+CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
-# CONFIG_TIMER_STATS is not set
+CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 
 #
@@ -4691,4 +4685,7 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
 CONFIG_LIBFDT=y
+CONFIG_OID_REGISTRY=y
+CONFIG_MPILIB=y
+CONFIG_CLZ_TAB=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
