--- a/rf-tools/Unified/ramdisk/init.baseband.rc
+++ b/rf-tools/Unified/ramdisk/init.baseband.rc
@@ -11,12 +11,19 @@ on init
     write /sys/class/net/rmnet6/queues/rx-0/rps_cpus 6
     write /sys/class/net/rmnet7/queues/rx-0/rps_cpus 6
 
+    # RIL <-> audioserver comm
+    chmod 0644 /proc/cmdline
+
 on fs
     chown radio system /efs
     chmod 0771 /efs
     chown radio radio sys/devices/virtual/misc/multipdp/waketime
     chmod 0660 /sys/devices/virtual/misc/umts_dm0/dm_state
     chown radio system /sys/devices/virtual/misc/umts_dm0/dm_state
+
+    # /efs/factory.prop for Dual / Single SIM settings
+    chown radio radio /efs/factory.prop
+    chmod 0600 /efs/factory.prop
 
 on property:ril.clatd.v4-rmnet0=up
     write /sys/class/net/rmnet0/queues/rx-0/rps_cpus 4
@@ -50,11 +57,10 @@ on property:ril.clatd.v4-rmnet7=up
     write /sys/class/net/rmnet7/queues/rx-0/rps_cpus 4
     write /sys/class/net/v4-rmnet7/queues/rx-0/rps_cpus 2
 
-service cpboot-daemon /sbin/cbd -d -tss310 -bm -mm -P platform/13540000.dwmmc0/by-name/RADIO
+service cpboot-daemon /system/bin/cbd -d -tss310 -bm -mm -P platform/13540000.dwmmc0/by-name/RADIO
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r shell
-    seclabel u:r:cbd:s0
 
 on property:ro.multisim.simslotcount=*
    write /sys/module/modem_ctrl_ss310ap/parameters/ds_detect ${ro.multisim.simslotcount}
