--- a/arch/arm64/configs/lineage_j5y17lte_defconfig
+++ b/arch/arm64/configs/lineage_j5y17lte_defconfig
@@ -308,6 +308,7 @@ CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -468,7 +469,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
-CONFIG_SYSVIPC_COMPAT=y
+# CONFIG_SYSVIPC_COMPAT is not set
 CONFIG_KEYS_COMPAT=y
 
 #
@@ -498,7 +499,7 @@ CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
-# CONFIG_SUSPEND_TIME is not set
+CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 CONFIG_STATE_NOTIFIER=y
@@ -1328,7 +1329,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
-# CONFIG_DM_UEVENT is not set
+CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
 # CONFIG_DM_SWITCH is not set
@@ -3721,9 +3722,6 @@ CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS=y
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
 # CONFIG_DEVFREQ_GOV_USERSPACE is not set
 
-
-
-
 #
 # DEVFREQ Drivers
 #
@@ -4503,6 +4501,7 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
+CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
