Drop FakeEnforcing and Switch to Full Permissive

--- a/arch/arm64/configs/lineage_j5y17lte_defconfig
+++ b/arch/arm64/configs/lineage_j5y17lte_defconfig
@@ -4484,6 +4484,8 @@ CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_PATH is not set
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_NEVER_ENFORCE=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
